add proposed framework of project merged with master gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,6 @@ fabric.properties
 # Pyre type checker
 
 # End of https://www.gitignore.io/api/pycharm,python,django
+
+#default linux directory config file
+.directory
