--- a/game/config/game_config.json
+++ b/game/config/game_config.json
@@ -4,5 +4,8 @@
   "intro_duration" : 6000,
   "login_font_size" : 50,
   "menu_title_font_size": 70,
-  "menu_font_size": 50
+  "menu_font_size": 50,
+  "interactive_menu_font_size": 25,
+  "interactive_menu_top_margin": 10,
+  "interactive_menu_left_margin": 5
 }
