--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.pot
 *.pyc
 __pycache__/
+.idea
 local_settings.py
 db.sqlite3
 media
@@ -24,7 +25,9 @@ media
 *.so
 
 # Distribution / packaging
+.idea/
 .Python
+.idea/
 build/
 develop-eggs/
 dist/
@@ -139,7 +142,6 @@ dmypy.json
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -273,3 +275,6 @@ fabric.properties
 # Pyre type checker
 
 # End of https://www.gitignore.io/api/pycharm,python,django
+
+#linux directory config
+.directory
