updating to develop version

--- a/game/config/game_config.json
+++ b/game/config/game_config.json
@@ -1,5 +1,6 @@
 {
   "font": "Segoe UI",
+  "monospaced_font":  "consolas",
   "intro_font_size" : 120,
   "intro_duration" : 6000,
   "login_font_size" : 50,
@@ -10,5 +11,8 @@
   "interactive_menu_left_margin": 5,
   "creators_font_size" : 20,
   "creators_padding" : 10,
-  "creators_font_style" : "freesansbold.ttf"
+  "creators_font_style" : "freesansbold.ttf",
+  "controls_font": "Arial",
+  "controls_title_size": 70,
+  "controls_font_size": 50
 }
