--- a/server_UDP/config/server_config.json
+++ b/server_UDP/config/server_config.json
@@ -2,5 +2,7 @@
   "ipAddress": "localhost",
   "portNumber": 7070,
   "maxHosts": 64,
-  "maxPackage": 262144
+  "maxPackage": 262144,
+  "character_start_health": 100,
+  "character_start_position": [100, 100]
 }
