--- a/game/lib/config/items/item_config.json
+++ b/game/lib/config/items/item_config.json
@@ -1,3 +1,7 @@
 {
-  "item_sprite_size": 64
+  "item_sprite_size": 64,
+  "melee": 0,
+  "distance": 1,
+  "hook_damage": 5,
+  "stick_damage": 5
 }
